--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
         "test": "jest"
     },
     "devDependencies": {
-        "yeoman-test": "^1.7.0",
+        "eslint": "^8.15.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-xo": "^0.40.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "husky": "^8.0.1",
+        "jest": "^28.1.0",
+        "lint-staged": "^12.4.1",
+        "prettier": "^2.6.2",
         "yeoman-assert": "^3.1.1",
-        "eslint": "^6.6.0",
-        "prettier": "^1.19.1",
-        "husky": "^3.0.9",
-        "lint-staged": "^9.4.3",
-        "eslint-config-prettier": "^6.6.0",
-        "eslint-plugin-prettier": "^3.1.1",
-        "eslint-config-xo": "^0.27.2",
-        "jest": "^26.1.0"
+        "yeoman-test": "^6.3.0"
     },
     "dependencies": {
-        "yeoman-generator": "^3.1.1",
-        "chalk": "^2.1.0",
+        "chalk": "^5.0.1",
+        "yeoman-generator": "^5.6.1",
         "yosay": "^2.0.2"
     },
     "jest": {
