--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
         "@semantic-release/git": "^10.0.1",
         "cz-conventional-changelog": "3.3.0",
         "eslint": "^8.15.0",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-config-xo": "^0.40.0",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.0.0",
         "husky": "^8.0.1",
         "jest": "^28.1.0",
