chore: update main entry path

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "boilerplate"
     ],
     "license": "MIT",
-    "main": "generators/index.js",
+    "main": "generators/app/index.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/Norgate-AV-Solutions-Ltd/generator-norgate-av.git"
