--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "scripts": {
         "pretest": "yarn lint",
         "test": "jest",
+        "test:watch": "jest --watch",
         "lint": "eslint .",
         "lint:fix": "eslint --fix .",
         "pretty:fix": "prettier --write .",
