--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
         "prettier": "^2.6.2",
         "semantic-release": "^19.0.2",
         "yeoman-assert": "^3.1.1",
+        "yeoman-environment": "^3.9.1",
         "yeoman-test": "^6.3.0"
     },
     "dependencies": {
-        "chalk": "^5.0.1",
+        "chalk": "^4.1.2",
+        "which": "^2.0.2",
         "yeoman-generator": "^5.6.1",
         "yosay": "^2.0.2"
     }
