chore(eslint): add some extra linting rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,9 @@
             {
                 "avoidEscape": true
             }
-        ]
+        ],
+        "no-console": "off",
+        "no-restricted-syntax": "off",
+        "no-param-reassign": "off"
     }
 }
