--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
         "@commitlint/config-conventional": "^16.2.1",
         "@semantic-release/changelog": "^6.0.1",
         "@semantic-release/git": "^10.0.1",
+        "@types/jest": "^27.5.0",
+        "@types/node": "^16.11.6",
+        "@types/yeoman-generator": "^5.2.10",
+        "@types/yeoman-test": "^4.0.3",
         "cz-conventional-changelog": "3.3.0",
         "eslint": "^8.15.0",
         "eslint-config-airbnb-base": "^15.0.0",
