--- a/generators/app/templates/project-ts/.eslintrc.json
+++ b/generators/app/templates/project-ts/.eslintrc.json
@@ -1,15 +1,17 @@
 {
     "env": {
-        "commonjs": true,
         "es2021": true,
         "node": true,
         "jest": true
     },
     "extends": ["airbnb-base", "plugin:prettier/recommended"],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "project": ["./tsconfig.json", ".tsconfig.eslint.json"]
     },
-    "plugins": ["prettier"],
+    "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
         "quotes": [
             "error",
