--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
         "@types/node": "^16.11.6",
         "@types/yeoman-generator": "^5.2.10",
         "@types/yeoman-test": "^4.0.3",
+        "all-contributors-cli": "^6.20.0",
         "cz-conventional-changelog": "3.3.0",
+        "doctoc": "^2.2.0",
         "eslint": "^8.15.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.5.0",
