ci(main): add custom install command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Install (with cache)
         uses: bahmutov/npm-install@v1
+        with:
+          install-command: yarn --frozen-lockfile --network-timeout 1000000
 
       - name: Lint
         run: yarn lint:fix
@@ -50,6 +52,8 @@ jobs:
 
       - name: Install (with cache)
         uses: bahmutov/npm-install@v1
+        with:
+          install-command: yarn --frozen-lockfile --network-timeout 1000000
 
       - name: Lint
         run: yarn lint:fix
