chore(eslint): allow underscore dangling

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         ],
         "no-console": "off",
         "no-restricted-syntax": "off",
-        "no-param-reassign": "off"
+        "no-param-reassign": "off",
+        "no-underscore-dangle": "off"
     }
 }
